fixed login icon overlap.

--- a/web/client/plugins/omnibar/omnibar.css
+++ b/web/client/plugins/omnibar/omnibar.css
@@ -118,6 +118,6 @@
 }
 
 #mapstore-navbar-container .square-button {
-    height: 64px;
-    width: 64px;
+    height: 63px;
+    width: 63px;
 }
